--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hi 小王庄时尚小王子
+<!DOCTYPE html>
+<html>
+<head>
+	<title>小王庄时尚小王子</title>
+	<meta charset="utf-8">
+</head>
+<body>
+	我尼玛nice
+</body>
+</html>
